<?xml version="1.0"?>
<package>
  <name>forest_path_finder</name>
  <version>1.0.0</version>
  <description>Random flying with a drone</description>

  <maintainer email="dmytruk@ucu.edu.ua">Andriy Dmytruk</maintainer>

  <license>free of charge</license>

  <author  email="dmytruk@ucu.edu.ua">Andriy Dmytruk</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <!-- <build_depend>libopencv-dev</build_depend> -->
  <build_depend>mrs_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mrs_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mrs_lib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
 
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <!-- <run_depend>libopencv-dev</run_depend> -->
  <run_depend>tf</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>mrs_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mrs_lib</run_depend>
  <run_depend>tf2</run_depend> 
  <run_depend>tf2_geometry_msgs</run_depend>

  <export>
  </export>

</package>
