<?xml version="1.0"?>
<package format="2">

  <name>swarm_gazebo_resources</name>
  <version>0.0.1</version>

  <description>The swarm_gazebo_resources package contains gazebo files (worlds, models and plugins) that are used for simualtion within the swarm_worspace.</description>

  <maintainer email="afzalhmd14@gmail.com">Afzal Ahmad</maintainer>

  <license>BSD,GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo</depend>
  <depend>gazebo_plugins</depend>

  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>

  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
      GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
      the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <!-- <gazebo_ros plugin_path="${prefix}/lib"/> -->
  </export>
  
</package>
